# backend/openapi.yaml
@@ -122,7 +122,7 @@ paths:
           in: path
           required: true
           schema:
-            type: string
+            type: number
       responses:
         "200":
           description: Transaction details
@@ -146,7 +146,7 @@ paths:
           in: path
           required: true
           schema:
-            type: string
+            type: number
       requestBody:
         required: true
         content:
@@ -178,7 +178,7 @@ paths:
           in: path
           required: true
           schema:
-            type: string
+            type: number
       responses:
         "204":
           description: Transaction deleted
@@ -215,6 +215,72 @@ paths:
                 $ref: "#/components/schemas/Statistics"
         "401":
           description: Unauthorized
+
+  /tags:
+    get:
+      summary: Get all tags
+      tags:
+        - Tag
+      security:
+        - BearerAuth: []
+      responses:
+        "200":
+          description: List of tags
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Tag"
+        "401":
+          description: Unauthorized
+
+    post:
+      summary: Create a new transaction
+      tags:
+        - Tag
+      security:
+        - BearerAuth: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/CreateTag"
+      responses:
+        "200":
+          description: Tag created
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Tag"
+        "400":
+          description: Invalid input
+        "401":
+          description: Unauthorized
+        "409":
+          description: Tag already exists
+
+  /tags/{id}:
+    delete:
+      summary: Delete a tag
+      tags:
+        - Tag
+      security:
+        - BearerAuth: []
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: number
+      responses:
+        "204":
+          description: Tag deleted
+        "401":
+          description: Unauthorized
+        "404":
+          description: Tag not found
 
 components:
   schemas:
@@ -280,6 +346,23 @@ components:
           type: array
           items:
             $ref: "#/components/schemas/tagAmount"
+
+    CreateTag:
+      type: object
+      required:
+        - name
+      properties:
+        name:
+          type: string
+          description: tag name
+
+    Tag:
+      allOf:
+        - $ref: "#/components/schemas/CreateTag"
+        - type: object
+          properties:
+            id:
+              type: string
 
   securitySchemes:
     BearerAuth:
